src/zenoh_dart.h

/// Deletes a resource on the given key expression.
///
/// @param session    Const pointer to a loaned session.
/// @param keyexpr    Const pointer to a loaned key expression.
/// @param timestamp  Optional pointer to 24 raw z_timestamp_t bytes, or NULL
///                   for none. Borrowed (copied into aligned storage), not
///                   consumed.
/// @param congestion_control  Congestion control strategy, or -1 to leave
///                   canon's own default (DROP -- this is a push path).
/// @param priority   Priority 1..7, or -1 to leave canon's default (data=5).
/// @param is_express 1/0 to set express mode, or -1 to leave canon's
///                   default (false).
/// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
///                   default (ANY).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_delete(
    const z_loaned_session_t* session,
    const z_loaned_keyexpr_t* keyexpr,
    const uint8_t* timestamp,
    int congestion_control,
    int priority,
    int8_t is_express,
    int allowed_destination);
/// Declares a subscriber on the given key expression.
///
/// Samples are posted to the Dart isolate via `Dart_PostCObject_DL` on
/// the given native port. Each sample is sent as a `Dart_CObject` array
/// of 9 elements: [keyexpr(Uint8List), payload(Uint8List), kind(int64),
/// attachment(null or Uint8List), encoding(string), timestamp(null or
/// Uint8List), priority(int64), congestion(int64), express(int64)].
///
/// The key expression is a `Uint8List`, not a string: it is length-carried
/// so an interior NUL survives the posting (the grammar permits one and canon
/// carries it byte-exact). Dart decodes it leniently for display.
///
/// @param session     Const pointer to a loaned session.
/// @param subscriber  Pointer to an uninitialized z_owned_subscriber_t.
/// @param keyexpr     Const pointer to a loaned key expression.
/// @param dart_port   The Dart native port to post samples to.
/// @return 0 on success, negative on failure.
/// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
///                        this declaration accepts, or -1 to leave canon's
///                        default (ANY).
/// @param retain_payload  Non-zero makes every delivered sample carry an
///                        OWNED clone of its payload as message element 9,
///                        transferring that clone to Dart. Zero posts kNull
///                        there and allocates nothing.
///                        ⛔ OWNERSHIP: on the delivered path the clone belongs
///                        to Dart, which must release it; on a FAILED post the
///                        callback reclaims it, because the discarded message
///                        held the only reference.
FFI_PLUGIN_EXPORT int zd_declare_subscriber(
    const z_loaned_session_t* session,
    z_owned_subscriber_t* subscriber,
    const z_loaned_keyexpr_t* keyexpr,
    int64_t dart_port,
    int allowed_origin,
    int retain_payload);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_uint16(
    ze_deserializer_t* deser, uint16_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_int8(
    ze_deserializer_t* deser, int8_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_int16(
    ze_deserializer_t* deser, int16_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_int32(
    ze_deserializer_t* deser, int32_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_int64(
    ze_deserializer_t* deser, int64_t* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_float(
    ze_deserializer_t* deser, float* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_double(
    ze_deserializer_t* deser, double* out);
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_bool(
    ze_deserializer_t* deser, bool* out);
/// Deserializes a string. Caller must drop the owned string.
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_string(
    ze_deserializer_t* deser, z_owned_string_t* out);
/// Deserializes a byte buffer (slice). Outputs owned bytes.
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_buf(
    ze_deserializer_t* deser, z_owned_bytes_t* out);
/// Deserializes a sequence length header.
FFI_PLUGIN_EXPORT int8_t zd_deserializer_deserialize_sequence_length(
    ze_deserializer_t* deser, size_t* out);