package/lib/src/bindings.dart


  /// Declares a subscriber on the given key expression.
  ///
  /// Samples are posted to the Dart isolate via `Dart_PostCObject_DL` on
  /// the given native port. Each sample is sent as a `Dart_CObject` array
  /// of 9 elements: [keyexpr(Uint8List), payload(Uint8List), kind(int64),
  /// attachment(null or Uint8List), encoding(string), timestamp(null or
  /// Uint8List), priority(int64), congestion(int64), express(int64)].
  ///
  /// The key expression is a `Uint8List`, not a string: it is length-carried
  /// so an interior NUL survives the posting (the grammar permits one and canon
  /// carries it byte-exact). Dart decodes it leniently for display.
  ///
  /// @param session     Const pointer to a loaned session.
  /// @param subscriber  Pointer to an uninitialized z_owned_subscriber_t.
  /// @param keyexpr     Const pointer to a loaned key expression.
  /// @param dart_port   The Dart native port to post samples to.
  /// @return 0 on success, negative on failure.
  /// @param allowed_origin  z_locality_t 0..2 restricting which peers' traffic
  /// this declaration accepts, or -1 to leave canon's
  /// default (ANY).
  /// @param retain_payload  Non-zero makes every delivered sample carry an
  /// OWNED clone of its payload as message element 9,
  /// transferring that clone to Dart. Zero posts kNull
  /// there and allocates nothing.
  /// ⛔ OWNERSHIP: on the delivered path the clone belongs
  /// to Dart, which must release it; on a FAILED post the
  /// callback reclaims it, because the discarded message
  /// held the only reference.
  int zd_declare_subscriber(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> subscriber,
    ffi.Pointer<ffi.Opaque> keyexpr,
    int dart_port,
    int allowed_origin,
    int retain_payload,
  ) {
    return _zd_declare_subscriber(
      session,
      subscriber,
      keyexpr,
      dart_port,
      allowed_origin,
      retain_payload,
    );
  }

  late final _zd_declare_subscriberPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Int,
            ffi.Int,
          )
        >
      >('zd_declare_subscriber');
  late final _zd_declare_subscriber = _zd_declare_subscriberPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          int,
          int,
          int,
        )
      >();

  /// Deletes a resource on the given key expression.
  ///
  /// @param session    Const pointer to a loaned session.
  /// @param keyexpr    Const pointer to a loaned key expression.
  /// @param timestamp  Optional pointer to 24 raw z_timestamp_t bytes, or NULL
  /// for none. Borrowed (copied into aligned storage), not
  /// consumed.
  /// @param congestion_control  Congestion control strategy, or -1 to leave
  /// canon's own default (DROP -- this is a push path).
  /// @param priority   Priority 1..7, or -1 to leave canon's default (data=5).
  /// @param is_express 1/0 to set express mode, or -1 to leave canon's
  /// default (false).
  /// @param allowed_destination  z_locality_t 0..2, or -1 to leave canon's
  /// default (ANY).
  /// @return 0 on success, negative on failure.
  int zd_delete(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> keyexpr,
    ffi.Pointer<ffi.Uint8> timestamp,
    int congestion_control,
    int priority,
    int is_express,
    int allowed_destination,
  ) {
    return _zd_delete(
      session,
      keyexpr,
      timestamp,
      congestion_control,
      priority,
      is_express,
      allowed_destination,
    );
  }

  late final _zd_deletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int8,
            ffi.Int,
          )
        >
      >('zd_delete');
  late final _zd_delete = _zd_deletePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
        )
      >();

  int zd_deserializer_deserialize_bool(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Bool> out,
  ) {
    return _zd_deserializer_deserialize_bool(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_boolPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Bool>,
          )
        >
      >('zd_deserializer_deserialize_bool');
  late final _zd_deserializer_deserialize_bool =
      _zd_deserializer_deserialize_boolPtr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Bool>)
          >();

  /// Deserializes a byte buffer (slice). Outputs owned bytes.
  int zd_deserializer_deserialize_buf(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_deserializer_deserialize_buf(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_bufPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_deserializer_deserialize_buf');
  late final _zd_deserializer_deserialize_buf =
      _zd_deserializer_deserialize_bufPtr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Opaque>,
            )
          >();

  int zd_deserializer_deserialize_double(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _zd_deserializer_deserialize_double(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_doublePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Double>,
          )
        >
      >('zd_deserializer_deserialize_double');
  late final _zd_deserializer_deserialize_double =
      _zd_deserializer_deserialize_doublePtr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Double>,
            )
          >();

  int zd_deserializer_deserialize_float(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Float> out,
  ) {
    return _zd_deserializer_deserialize_float(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_floatPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('zd_deserializer_deserialize_float');
  late final _zd_deserializer_deserialize_float =
      _zd_deserializer_deserialize_floatPtr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Float>)
          >();

  int zd_deserializer_deserialize_int16(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Int16> out,
  ) {
    return _zd_deserializer_deserialize_int16(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_int16Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Int16>,
          )
        >
      >('zd_deserializer_deserialize_int16');
  late final _zd_deserializer_deserialize_int16 =
      _zd_deserializer_deserialize_int16Ptr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Int16>)
          >();

  int zd_deserializer_deserialize_int32(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Int32> out,
  ) {
    return _zd_deserializer_deserialize_int32(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_int32Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('zd_deserializer_deserialize_int32');
  late final _zd_deserializer_deserialize_int32 =
      _zd_deserializer_deserialize_int32Ptr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Int32>)
          >();

  int zd_deserializer_deserialize_int64(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Int64> out,
  ) {
    return _zd_deserializer_deserialize_int64(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_int64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('zd_deserializer_deserialize_int64');
  late final _zd_deserializer_deserialize_int64 =
      _zd_deserializer_deserialize_int64Ptr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Int64>)
          >();

  int zd_deserializer_deserialize_int8(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Int8> out,
  ) {
    return _zd_deserializer_deserialize_int8(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_int8Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Int8>,
          )
        >
      >('zd_deserializer_deserialize_int8');
  late final _zd_deserializer_deserialize_int8 =
      _zd_deserializer_deserialize_int8Ptr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Int8>)
          >();

  /// Deserializes a sequence length header.
  int zd_deserializer_deserialize_sequence_length(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Size> out,
  ) {
    return _zd_deserializer_deserialize_sequence_length(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_sequence_lengthPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('zd_deserializer_deserialize_sequence_length');
  late final _zd_deserializer_deserialize_sequence_length =
      _zd_deserializer_deserialize_sequence_lengthPtr
          .asFunction<
            int Function(ffi.Pointer<ze_deserializer_t>, ffi.Pointer<ffi.Size>)
          >();

  /// Deserializes a string. Caller must drop the owned string.
  int zd_deserializer_deserialize_string(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_deserializer_deserialize_string(
      deser,
      out,
    );
  }

  late final _zd_deserializer_deserialize_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ze_deserializer_t>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_deserializer_deserialize_string');
  late final _zd_deserializer_deserialize_string =
      _zd_deserializer_deserialize_stringPtr
          .asFunction<
            int Function(
              ffi.Pointer<ze_deserializer_t>,
              ffi.Pointer<ffi.Opaque>,
            )
          >();

  int zd_deserializer_deserialize_uint16(
    ffi.Pointer<ze_deserializer_t> deser,
    ffi.Pointer<ffi.Uint16> out,
  ) {
    return _zd_deserializer_deserialize_uint16(
      deser,
      out,
    );
  }
